err/goreutilities.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GoreUtilities'...
Compiling './lib/python3.5/site-packages/GoreUtilities/backup_util.py'...
***   File "./lib/python3.5/site-packages/GoreUtilities/backup_util.py", line 74
    print '\t' * indent + str(key).title(),
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/GoreUtilities/dialogs.py'...
***   File "./lib/python3.5/site-packages/GoreUtilities/dialogs.py", line 94
    print "You chose the following filename: %s" % path
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/GoreUtilities/docstring.py'...
***   File "./lib/python3.5/site-packages/GoreUtilities/docstring.py", line 107
    print f.__doc__
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/GoreUtilities/graph.py'...
***   File "./lib/python3.5/site-packages/GoreUtilities/graph.py", line 924
    print 'Fit coefficients: ', coefs
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/GoreUtilities/simulation.py'...
***   File "./lib/python3.5/site-packages/GoreUtilities/simulation.py", line 50
    print kwargs
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/GoreUtilities/test'...
Listing './lib/python3.5/site-packages/GoreUtilities-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
